--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "test:e2e": "jest --config ./apps/onion/test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.21.1",
+    "cheerio": "^1.0.0",
+    "playwright": "^1.48.2",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-real-browser": "^1.3.17",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -74,7 +80,9 @@
     ],
     "moduleNameMapper": {
       "^lib/db(|/.*)$": "<rootDir>/libs/db/src/$1",
-      "^@app/db(|/.*)$": "<rootDir>/libs/db/src/$1"
+      "^@app/db(|/.*)$": "<rootDir>/libs/db/src/$1",
+      "^@scrapper(|/.*)$": "<rootDir>/apps/onion-scrapper/src/$1",
+      "^@api(|/.*)$": "<rootDir>/apps/onion-api/src/$1"
     }
   }
 }
