--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.1.1",
+    "@nestjs/bullmq": "^10.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.21.1",
+    "bullmq": "^5.25.4",
     "cheerio": "^1.0.0",
     "playwright": "^1.48.2",
     "playwright-extra": "^4.3.6",
