--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,8 @@
       "@app/db/*": [
         "libs/db/src/*"
       ],
-      "@scrapper/*": [
-        "apps/onion-scrapper/src/*"
+      "@scraper/*": [
+        "apps/onion-scraper/src/*"
       ],
       "@api/*": [
         "apps/onion-api/src/*"
