--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "postinstall": "npx prisma generate --schema=libs/db/src/prisma/schema.prisma",
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/onion/main",
+    "start:prod:api": "node dist/apps/onion-api/main",
+    "start:prod:scraper": "node dist/apps/onion-scraper/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/onion/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/onion/test/jest-e2e.json",
+    "start:migrate:prod": "prisma migrate deploy --schema=libs/db/src/prisma/schema.prisma && npm run start:prod:scraper"
   },
   "dependencies": {
     "@bull-board/api": "^6.3.3",
