--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:15.1
+    image: postgres:17.1
     restart: always
     container_name: postgres
     env_file:
@@ -13,12 +13,14 @@ services:
       - '6500:5432'
 
   redis:
-    image: redis:latest
+    image: redis:7.4.1
     container_name: redis
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     restart: always
     env_file:
       - ./.env
+    volumes:
+      - redis-data:/data
     networks:
       - backend
     ports:
