--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.1",
     "@prisma/client": "^5.21.1",
     "bullmq": "^5.25.4",
     "cheerio": "^1.0.0",
