--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@bull-board/api": "^6.3.3",
     "@bull-board/express": "^6.3.3",
     "@bull-board/nestjs": "^6.3.3",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^3.1.1",
     "@nestjs/bullmq": "^10.2.2",
     "@nestjs/common": "^10.0.0",
@@ -36,6 +37,9 @@
     "@prisma/client": "^5.21.1",
     "bullmq": "^5.25.4",
     "cheerio": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "nodemailer": "^6.9.16",
     "playwright": "^1.48.2",
     "playwright-extra": "^4.3.6",
     "puppeteer-real-browser": "^1.3.17",
@@ -50,6 +54,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
