--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/onion/test/jest-e2e.json",
-    "start:migrate:prod": "prisma migrate deploy --schema=libs/db/src/prisma/schema.prisma && npm run start:prod:scraper"
+    "start:migrate:prod": "prisma migrate deploy --schema=libs/db/src/prisma/schema.prisma && npm run start:prod:scraper",
+    "deploy": "ts-node -r tsconfig-paths/register ./scripts/deploy.ts"
   },
   "dependencies": {
     "@bull-board/api": "^6.3.3",
